// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders the basic <Header /> with a background 1`] = `
<div
  class="header__Background-sc-djltcn-0 kyFmtU"
  data-testid="header-bg"
>
  <div
    class="header__Container-sc-djltcn-1 cXDcvZ"
  >
    <p
      class="header__Link-sc-djltcn-2 bqkcep"
    >
      Hello I am a link!
    </p>
  </div>
</div>
`;

exports[`<Header /> renders the basic <Header /> without a background 1`] = `
<div
  class="header__Container-sc-djltcn-1 cXDcvZ"
>
  <p
    class="header__Link-sc-djltcn-2 bzkFcd"
  >
    Hello I am a link!
  </p>
</div>
`;

exports[`<Header /> renders the full <Header /> with a background 1`] = `
<div
  class="header__Background-sc-djltcn-0 SuLAO"
  data-testid="header-bg"
  src="joker1"
>
  <div
    class="header__Container-sc-djltcn-1 cXDcvZ"
  >
    <div
      class="header__Group-sc-djltcn-3 dQCLyw"
    >
      <p
        class="header__Link-sc-djltcn-2 bzkFcd"
      >
        Series
      </p>
      <p
        class="header__Link-sc-djltcn-2 bzkFcd"
      >
        Films
      </p>
    </div>
    <div
      class="header__Group-sc-djltcn-3 dQCLyw"
    >
      <div
        class="header__Search-sc-djltcn-5 cpJTvc"
      >
        <button
          class="header__SearchIcon-sc-djltcn-6 fjhuhN"
          data-testid="search-click"
        >
          <img
            alt="Search"
            src="/images/icons/search.png"
          />
        </button>
        <input
          class="header__SearchInput-sc-djltcn-4 dBIoSP"
          data-testid="search-input"
          placeholder="Search films and series"
          value="Joker"
        />
      </div>
      <div
        class="header__Profile-sc-djltcn-10 kSiQRJ"
      >
        <button
          class="header__Picture-sc-djltcn-8 bCvqRg"
          src="/images/users//images/karl.png.png "
        />
        <div
          class="header__Dropdown-sc-djltcn-9 jEQwaG"
        >
          <div
            class="header__Group-sc-djltcn-3 dQCLyw"
          >
            <button
              class="header__Picture-sc-djltcn-8 bCvqRg"
              src="/images/users//images/karl.png.png "
            />
            <p
              class="header__Link-sc-djltcn-2 bzkFcd"
            >
              Karl Hadwen
            </p>
          </div>
          <div
            class="header__Group-sc-djltcn-3 dQCLyw"
          >
            <p
              class="header__Link-sc-djltcn-2 bzkFcd"
            >
              Sign out
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="header__Container-sc-djltcn-1 header__Feature-sc-djltcn-11 cXDcvZ ipHyyR"
  >
    <h2
      class="header__FeatureCallOut-sc-djltcn-12 MWYzL"
    >
      Watch Joker Now
    </h2>
    <p
      class="header__Text-sc-djltcn-13 lnasyT"
    >
      Forever alone in a crowd ..
    </p>
    <button
      class="header__PlayButton-sc-djltcn-15 delzPS"
    >
      Play
    </button>
  </div>
</div>
`;
